--- a/src/app/location/support/support.component.html
+++ b/src/app/location/support/support.component.html
@@ -1,21 +1,28 @@
 <div class="content">
-    <h2>{{text}}</h2>
-    <p>Jūsų mašinos nr.: {{ carNr }}</p>
+    <div class="text">
+        <h2>{{text}}</h2>
+        <p>Jūsų mašinos nr.: {{ carNr }}</p>
+    </div>
+   
     <div #mapWrapper id="map"></div>
     
-    <div *ngIf="!worker || error">
-        <p>Įvyko klaida generuojant maršrutą. Bandykite iš naujo</p>
-    </div>
-    <div *ngIf="worker && !error">
-        <p>Pas Jus važiuoja {{ worker.name }} {{ worker.phone }}</p>
-        <a class="btn btn-primary" href="tel:{{worker.phone}}">Skambinti</a>
+    <div class="textBottom">
+        <div *ngIf="!worker || error">
+            <p>Įvyko klaida generuojant maršrutą. Bandykite iš naujo</p>
+        </div>
+        <div *ngIf="worker && !error">
+            <p>Pas Jus važiuoja {{ worker.name }} {{ worker.phone }}</p>
+        </div>
+        <div *ngIf="worker && !error">
+            <a class="btn btn-success" href="tel:{{worker.phone}}">Skambinti</a>
+        </div>
         
+        <div class="links">
+            <a  [routerLink]="['/setLocation', carNr]">Pasirinkti kitą poziciją</a>
+            <br />
+            <a  routerLink="/identification">Registruoti naują automobilį</a>
+        </div>
         
     </div>
-    
-    
-    <br>
-    <a class="btn btn-outline-info" [routerLink]="['/setLocation', carNr]">Pasirinkti kitą poziciją</a>
-    <br>
-    <a class="btn btn-outline-danger" routerLink="/identification">Registruoti naują automobilį</a>
+   
 </div>
