--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -1,9 +1,12 @@
-<div>
-    <h2>Pasirinkite savo buvimo vietą, tempkite "žymeklį".
-        Kad Jūsų vieta būtų kuo tikslesnė, įjunkite GPS</h2>
-    <p>Jūsų mašinos nr.: {{ carNr }}</p>
+<div class="content">
+    <div class="text">
+        <h2>Pasirinkite savo buvimo vietą, tempkite „žymeklį“.
+                Kad Jūsų vieta būtų kuo tikslesnė, įjunkite GPS</h2>
+        <p>Jūsų mašinos nr.: {{ carNr }}</p>
+    </div>
+   
     <div #mapWrapper id="map"></div>
-    <button class="btn btn-primary" [disabled]="!worker" 
+    <button class="btn btn-success" [disabled]="!worker" 
         (click)="setDirections()"  
         [routerLink]="['/trackTechSupport', carNr]">Toliau</button>   
 </div>
