--- a/src/app/location/location.component.scss
+++ b/src/app/location/location.component.scss
@@ -1,1 +1,21 @@
-
+.content {
+    width: 85%;
+    margin: 0 auto;
+    text-align:center;
+}
+.text {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    height: 150px;
+    padding-bottom: 25px;
+}
+button {
+    margin-top: 25px;
+    
+}
+p {
+    margin-left: 50px;
+    color: #0D4C27;
+}
+ 
