--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,22 +1,61 @@
 html {
     height: 100%;
     font-family: 'Barlow', sans-serif;
+    
 }
 h1, h2, p {
     font-family: 'Barlow', sans-serif;
     font-weight: 400;
+    text-align: left;
 }
 h1 {
     font-size: 26px;
     font-weight: 400;
 }
+h2 {
+    font-size: 22px; 
+    font-weight: 500;
+}
+p {
+    margin: 0;
+    font-size: 18px;
+}
 
 body {
     height: 100%;
+    background-color: whitesmoke;
 }
 
 #map {
-    height: 800px;
+    height: 650px;
+}
+
+.btn-success {
+    background-color: #0D4C27;
+    border-color: #0D4C27;
+}
+
+.btn-success:hover {
+    background-color: #116031;
+}
+
+.btn-success:disabled {
+    background-color: #18492C;
+}
+
+.form-control:focus {
+    border-color: #0D4C27;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #0D4C27;
+}
+
+button {
+    width: 150px;
+}
+
+@media only screen and (max-height:700px) {
+    #map {
+        height: 400px;
+    }
 }
 
 
